fix z-index & content of frontend feedback Signed-off-by: vuvuvuvvv <nguyenvu260502@gmail.com>

--- a/frontend/web/css/index.css
+++ b/frontend/web/css/index.css
@@ -20,7 +20,7 @@
     top: 70px;
 }
 #feedBack {
-    z-index: 100px;
+    z-index: 100;
 }
 .right {
     right: 0;
